# llama-rest

./: .gitignore  README.md  pyproject.toml
src/: funnel.sh  requirements.txt  rxconfig.py
src/.web/: bun.lockb  env.json  next-sitemap.config.js  package.json  reflex.install_frontend_packages.cached  reflex.json
src/.web/pages/: 404.js  _app.js  about.js  auth.js  index.js  profile.js  settings.js  table.js
src/.web/utils/: context.js  theme.js
src/defimoney_monitor/: .env.example  defimoney_monitor.py
src/defimoney_monitor/backend/: curve_polling.py  curve_query.py  dfm_polling.py  dfm_query.py  polling.py  query.py  telegram_bot.py
src/defimoney_monitor/backend/abi/: curve_abi.py  dfm_abi.py
src/defimoney_monitor/components/: card.py  navbar.py  notification.py
src/defimoney_monitor/pages/: __init__.py  auth.py  index.py
