[project]
name = "defimoney-monitor"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "web3>=7.2.0",
    "httpx>=0.27.2",
    "rich>=13.8.0",
    "python-dotenv>=1.0.1",
    "python-telegram-bot>=21.4",
    "pymongo>=4.8.0",
    "ipykernel>=6.29.5",
    "reflex>=0.5.10",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
